<resources>
    <string name="app_name">ConteoCelulas</string>
    <string name="recien_nacido">RECIEN NACIDO</string>
    <string name="ni_os">NIÑOS</string>
    <string name="_1_12_meses">1 - 12 MESES</string>
    <string name="_1_4_a_os">1 - 4 AÑOS</string>
    <string name="_5_16_a_os">5 - 16 AÑOS</string>
    <string name="constantes_hematol_gicas">Constantes Hematológicas</string>
    <string name="sg">Sg</string>
    <string name="eb">Eb</string>
    <string name="plus">+</string>
    <string name="lf">Lf</string>
    <string name="mn">Mn</string>
    <string name="jv">Jv</string>
    <string name="mc">Mc</string>
    <string name="bs">Bs</string>
    <string name="total">Total:</string>
    <string name="eo">Eo</string>
    <string name="logo">logo</string>
    <string name="resultado">Resultado</string>
    <string name="serie_megatocritica">Serie Megatocritica</string>
    <string name="serie_mieloide">Serie Mieloide</string>
    <string name="serie_monocitica">Serie Monocitica</string>
    <string name="serie_linfoide">Serie Linfoide</string>
    <string name="serie_eritroide">Serie Eritroide</string>
    <string name="linfo">Linfo</string>
    <string name="linfo_reac">Linfo Reac</string>
    <string name="mielo">Mielo</string>
    <string name="prom">Prom</string>
    <string name="prolin">PROLIN</string>
    <string name="mono">Mono</string>
    <string name="promo">Promo</string>
    <string name="mcariobl">Mcariobl</string>
    <string name="mcarioci">Mcarioci</string>
    <string name="mimcarioci">miMcarioci</string>
    <string name="mimcariobl">MiMCarioBl</string>
    <string name="eritobl_bs">EritoBl BS</string>
    <string name="eritobl_ortocr">EritoBL ortocr</string>
    <string name="eritobl_policr">EritoBL Policr</string>
    <string name="hemat_es">Hematíes</string>
    <string name="leucocitos">Leucocitos</string>
    <string name="plaquetas">Plaquetas</string>
    <string name="resultado_final">Resultado Final</string>
    <string name="agregar_caracteristicas_de_las_celulas">Agregar caracteristicas de las celulas:</string>
    <string name="normales_al_frotis">Normales al Frotis</string>
    <string name="caracteristicas_de_plaquetas">Caracteristicas de Plaquetas</string>
    <string name="macroplaquetas">MacroPlaquetas</string>
    <string name="microplaquetas">MicroPlaquetas</string>
    <string name="disminuidas">Disminuidas</string>
    <string name="_1">1+</string>
    <string name="_2">2+</string>
    <string name="_3">3+</string>
    <string name="aumentadas">Aumentadas</string>
    <string name="continuar">Continuar</string>
    <string name="caracteristica">Caracteristica...</string>
    <string name="caracteristicas_leucocitos">Caracteristicas Leucocitos</string>
    <string name="constantes_hematologicas">Constantes Hematologicas</string>
</resources>
