<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cl.uct.cedest.conteocelulas.Controller.CaracteristicaPlaqueta">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="79dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/uct_logo" />

    <CheckBox
        android:id="@+id/normalesChck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/signika_bold"
        android:text="@string/normales_al_frotis"
        android:textSize="24sp"
        android:onClick="normalesClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/signika"
        android:text="@string/caracteristicas_de_plaquetas"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <CheckBox
        android:id="@+id/macroPlaquetasChck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/signika_bold"
        android:text="@string/macroplaquetas"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/normalesChck" />

    <CheckBox
        android:id="@+id/microPlaquetasChck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/signika_bold"
        android:text="@string/microplaquetas"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/macroPlaquetasChck" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/signika_bold"
        android:text="@string/disminuidas"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/disminuida1Chck"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/disminuida1Chck" />

    <CheckBox
        android:id="@+id/disminuida1Chck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/signika_bold"
        android:text="@string/_1"
        app:layout_constraintEnd_toStartOf="@+id/disminuida2Chck"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/microPlaquetasChck" />

    <CheckBox
        android:id="@+id/disminuida2Chck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/signika_bold"
        android:text="@string/_2"
        app:layout_constraintBottom_toBottomOf="@+id/disminuida1Chck"
        app:layout_constraintEnd_toStartOf="@+id/disminuida3Chck"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/disminuida1Chck" />

    <CheckBox
        android:id="@+id/disminuida3Chck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/signika_bold"
        android:text="@string/_3"
        app:layout_constraintBottom_toBottomOf="@+id/disminuida2Chck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/disminuida2Chck" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/signika_bold"
        android:text="@string/aumentadas"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/aumentada1Chck"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/aumentada1Chck" />

    <CheckBox
        android:id="@+id/aumentada1Chck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/signika_bold"
        android:text="@string/_1"
        app:layout_constraintEnd_toStartOf="@+id/aumentada2Chck"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/disminuida1Chck" />

    <CheckBox
        android:id="@+id/aumentada2Chck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/signika_bold"
        android:text="@string/_2"
        app:layout_constraintBottom_toBottomOf="@+id/aumentada1Chck"
        app:layout_constraintEnd_toStartOf="@+id/aumentada3Chck"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/aumentada1Chck" />

    <CheckBox
        android:id="@+id/aumentada3Chck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/signika_bold"
        android:text="@string/_3"
        app:layout_constraintBottom_toBottomOf="@+id/aumentada2Chck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/aumentada2Chck" />

    <Button
        android:id="@+id/continuarPlaquetasBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fontFamily="@font/signika_bold"
        android:text="@string/continuar"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
